--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body{
             background: rgb(34, 34, 34);
-            color: whitesmoke;
+            color: bisque;
             font-family: Roboto, light;
         }
         h1{
